# cross-opengl-glfw

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: triangle.vert  triangle_es.frag  triangle_es.vert
src/: CMakeLists.txt  main.cpp  shaders.in.hpp
